# GIAfem

./: .SG_PW.cpp.swp  .gitignore  0.cpp  0.gf  0.mesh  4  4S.msh  CMakeLists.txt  LICENSE  README.md  SG  SG.cpp  SG_PW  SG_PW.cpp  SG_PW_0.cpp  \  concentric_spherical_layers.msh  deformation.gf  deviatoric_strain.gf  displacement.gf  ex1  ex1.gf  geomesh  geomesh.cpp  geomesh_Earth  geomesh_Earth.cpp  geomesh_f  geomesh_f.cpp  mesh.000000  mesh.000001  mesh.000002  mesh.000003  mesh.mesh  mfem_temp.cpp  mfem_temp_p.cpp  output.mesh  output.msh  output.txt  output_file  plot_radial.py  (+14 more)
.cache/clangd/index/: SG_PW.cpp.C6505D881E779A8A.idx  SG_PW_p.cpp.CC48B813E1ED507F.idx  SG_PW_theta.cpp.3EB3AB9F39E4EB14.idx  beam.cpp.61C8E0EFF9183369.idx  beam_t.cpp.FC287C29E175F58D.idx  elastostatic.cpp.7F4800CCD14514EF.idx  geomesh.cpp.32C94F29962F9984.idx  geomesh_Earth.cpp.FD21B05729DFFB4D.idx  geomesh_f.cpp.78E37A134764324B.idx  giafem.cpp.49394E13E656ABCE.idx  giafem.hpp.1CB2C0FC6285DCD1.idx  test.cpp.CA0B3EAAA63FC0F7.idx  test_time_oper.cpp.6C32D5F156B2D976.idx  test_ve.cpp.F33B3AF21BCD1142.idx  viscoelastic.cpp.89770C18829F74EF.idx  viscoelastic_sphere.cpp.3116E83ECCE81535.idx
data/: 1S.geo  1S.msh  1s.msh  2S.msh  2S_10.txt  2S_10_theta.txt  2S_20.txt  2S_20_test.txt  2S_20_theta.txt  2S_30.txt  2S_30_theta.txt  2S_40.txt  2S_40_theta.txt  2S_50.txt  2S_50_theta.txt  4S.msh  crsthk.xyz.zip:Zone.Identifier  depthtomoho.xyz.zip:Zone.Identifier  mesh.000000  mesh.000001  mesh.000002  mesh.000003  mesh.000004  mesh.000005  mesh.000006  mesh.000007  output.txt  prem.200.noiso  prem.nocrust  prem_simple.200.noiso  sedthk-m.xyz.zip:Zone.Identifier  sedthk.xyz.zip:Zone.Identifier  sg_prem.txt  sol.000000  sol.000001  sol.000002  sol.000003  sol.000004  sol.000005  sol.000006  (+1 more)
data/m_output/: m_step_0.gf  m_step_1.gf  m_step_10.gf  m_step_100.gf  m_step_11.gf  m_step_12.gf  m_step_13.gf  m_step_14.gf  m_step_15.gf  m_step_16.gf  m_step_17.gf  m_step_18.gf  m_step_19.gf  m_step_2.gf  m_step_20.gf  m_step_21.gf  m_step_22.gf  m_step_23.gf  m_step_24.gf  m_step_25.gf  m_step_26.gf  m_step_27.gf  m_step_28.gf  m_step_29.gf  m_step_3.gf  m_step_30.gf  m_step_31.gf  m_step_32.gf  m_step_33.gf  m_step_34.gf  m_step_35.gf  m_step_36.gf  m_step_37.gf  m_step_38.gf  m_step_39.gf  m_step_4.gf  m_step_40.gf  m_step_41.gf  m_step_42.gf  m_step_43.gf  (+61 more)
demos/: MatrixLinearForm.cpp  SG_PW.cpp  SG_PW_p.cpp  SG_PW_theta.cpp  beam.cpp  beam_t.cpp  displaced.mesh  elastostatic.cpp  ex.cpp  ex1.cpp  ex1p.cpp  ex1p_nd.cpp  ex2.cpp  ex2p.cpp  ex3p.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex6p.cpp  gia_forward.cpp  petscopts_elasticity_gravity  petscopts_viscoelastic  test.cpp  test_N_L2.cpp  test_N_alp.cpp  test_N_tau.cpp  test_field.cpp  test_field_2.cpp  test_interpolation.cpp  test_ode.cpp  test_ode_l2.cpp  test_ode_tau.cpp  test_time_oper.cpp  test_ve.cpp  viscoelastic.cpp  viscoelastic_beam.cpp  viscoelastic_sphere.cpp
include/: giafem.hpp
lib/: giafem.cpp
mesh/: 1_layer.msh  2S_10.msh  2S_12.msh  2_layer.msh  2s_8_fine.msh  prem_simple.msh
mesh/cpp/: geomesh.cpp  geomesh_f.cpp  geomesh_prem.cpp  geomesh_prem_crust.cpp  geomesh_prem_crust0.cpp  geomesh_prem_crust_2.cpp  geomesh_prem_crust_vis.cpp
other/: petsc-configure.py
py/: plot_alpha.py  plot_errors.py  plot_tau.py  plot_test_ode_bisection.py  test_ode.py
src/: CMakeLists.txt  giafem.cpp
tests/: test_coeff.cpp  test_integ.cpp  test_interp.cpp
